--- a/css/geonarrative.css
+++ b/css/geonarrative.css
@@ -7,7 +7,11 @@
   z-index: 999;
   background: url('../img/loading.gif') 50% 50% no-repeat white;
   opacity: 1;
-  }
+}
+
+nav {
+  background-color: transparent !important;
+}
 
 /* #map-container {
   position: sticky;
@@ -16,6 +20,7 @@
   width: 67vh;
   height: 100vh;
 } */
+
 
 #introText h1 {
   font-family: "Lora", serif;
